[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "misha"
version = "0.0.0"
authors = [
{ name="Fabrizio Ottati", email="mail@fabrizio-ottati.dev" },
]
description = "Decoding of event cameras output."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fabrizio-ottati/misha"
